[gd_scene load_steps=15 format=2]

[ext_resource path="res://enemies/base_enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/level4_sl/boss/boss_sl_shadow.png" type="Texture" id=2]
[ext_resource path="res://levels/level4_sl/boss/boss_sl.png" type="Texture" id=3]
[ext_resource path="res://levels/level4_sl/boss/boss_sl.gd" type="Script" id=4]
[ext_resource path="res://levels/level4_sl/boss/boss_sl_props.tres" type="Resource" id=5]
[ext_resource path="res://levels/level4_sl/boss/boss_sl_attack.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "norm_attack"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath("../..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_norm_attack"
} ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.0
height = 10.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 6.99998
height = 10.0

[sub_resource type="Animation" id=5]
length = 3.3
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 2.6, 2.7, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0, 1, 2, 3, 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enter_move_state"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Attack:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 4 ]
}

[sub_resource type="Animation" id=7]
resource_name = "move_alt"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Attack:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=8]
resource_name = "phase_two_activate"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Attack:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2, 1.3, 1.4, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_start_phase_two"
} ]
}

[node name="BossSL" instance=ExtResource( 1 )]
script = ExtResource( 4 )
_enemy_props = ExtResource( 5 )
_death_path = "res://levels/level4_sl/boss/BossSLDeath.tscn"
proj_path_norm = "res://levels/level4_sl/boss/BossSLNormProjectile.tscn"
proj_path_still = "res://levels/level4_sl/boss/BossSLTempProjectile.tscn"
x_ahead = 56
y_ahead = 56
norm_attack_rate = 0.75
alt_attack_rate = 0.1

[node name="Body" parent="." index="0"]
position = Vector2( 0, -19 )
texture = ExtResource( 3 )
hframes = 20
frame = 1

[node name="Attack" parent="Body" index="0"]
texture = ExtResource( 6 )
hframes = 11
frame = 10

[node name="SpawnPos" parent="Body/Attack" index="0"]
position = Vector2( 0, -10 )

[node name="AttackAnimation" parent="Body/Attack" index="1"]
anims/norm_attack = SubResource( 1 )

[node name="Shadow" parent="." index="1"]
position = Vector2( 0, -19 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( 0, -4 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Hitbox" parent="." index="3"]
position = Vector2( 0, -4 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -1 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Hurtbox" parent="." index="4"]
position = Vector2( 0, -19 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 11 )
shape = SubResource( 4 )

[node name="Pushbox" parent="." index="5"]
position = Vector2( 0, -4 )

[node name="Detectbox" parent="." index="6"]
position = Vector2( 0, -4 )

[node name="HealthDisplay" parent="." index="7"]
margin_left = -32.0
margin_top = -43.0
margin_right = 0.0
margin_bottom = -40.0
rect_scale = Vector2( 2, 1 )

[node name="AnimationPlayer" parent="." index="9"]
autoplay = "idle"
anims/idle = SubResource( 5 )
anims/move = SubResource( 6 )
anims/move_alt = SubResource( 7 )
anims/phase_two_activate = SubResource( 8 )

[node name="AttackTimerAlt" type="Timer" parent="." index="11"]
one_shot = true
